--- a/package.json
+++ b/package.json
@@ -14,21 +14,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/blur": "^4.4.0",
     "@react-navigation/native": "^6.0.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "expo": "~49.0.18",
+    "expo-blur": "~12.4.1",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "lucide-react-native": "^0.312.0",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -37,6 +45,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.1.3"
   },
   "overrides": {
